chore:admin API 單元測試、移除多餘註解、調整 swagger 文件

--- a/.env.testing
+++ b/.env.testing
@@ -22,7 +22,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=unit_test
+DB_DATABASE=unit_test_88
 DB_USERNAME=root
 DB_PASSWORD=Tgm3amon!
 
